--- a/index.html
+++ b/index.html
@@ -57,15 +57,15 @@
     <div class="feature-cards">
       <div class="card">
         <h3>AI & Automation</h3>
-        <p>🔹Automated Trading 🔹Sentiment Analysis 🔹Backtesting</p>
+        <p>🔺️Automated Trading 🔺️Sentiment Analysis 🔺️Backtesting</p>
       </div>
       <div class="card">
         <h3>Market Analysis</h3>
-        <p>🔹Live Market Data 🔹Charting Tools 🔹Custom Indicators</p>
+        <p>🔺️Live Market Data 🔺️Charting Tools 🔺️Custom Indicators</p>
       </div>
       <div class="card">
         <h3>Risk Analysis Dashboard</h3>
-        <p>🔹Custom AI-powered risk assessment 🔹Risk Management</p>
+        <p>🔺️Custom AI-powered risk assessment 🔺️Risk Management</p>
       </div>
     </div>
   </section>
